chain/api/src/snapshots/blokli_chain_api__transaction_monitor__tests__enrich_safe_execution_failure_revert_reason_rpc_error.snap
---
source: chain/api/src/transaction_monitor.rs
expression: "&result"
---
success: false
safe_tx_hash: "0x4200000000000000000000000000000000000000000000000000000000000000"
revert_reason: ~
