chain/api/src/snapshots/blokli_chain_api__transaction_monitor__tests__enrich_safe_execution_succeeds_for_known_safe.snap
---
source: chain/api/src/transaction_monitor.rs
expression: "&result"
---
success: true
safe_tx_hash: "0x4242424242424242424242424242424242424242424242424242424242424242"
revert_reason: ~
