chain/api/src/snapshots/blokli_chain_api__transaction_monitor__tests__enrich_safe_execution_via_module_address.snap
---
source: chain/api/src/transaction_monitor.rs
expression: snap(&result)
---
success: true
safe_tx_hash: ~
revert_reason: ~
