chain/api/src/snapshots/blokli_chain_api__transaction_monitor__tests__monitor_updates_reverted_transaction.snap
---
source: chain/api/src/transaction_monitor.rs
expression: updated
---
id: 01020304-0506-0708-090a-0b0c0d0e0f10
raw_transaction:
  - 1
transaction_hash: "0x0000000000000000000000000000000000000000000000000000000000000000"
status: Reverted
submitted_at: "[timestamp]"
confirmed_at: ~
error_message: Transaction reverted on-chain
safe_execution: ~
