chain/api/src/snapshots/blokli_chain_api__transaction_monitor__tests__poll_once_confirms_with_safe_execution_atomically.snap
---
source: chain/api/src/transaction_monitor.rs
expression: updated
---
id: 01020304-0506-0708-090a-0b0c0d0e0f10
raw_transaction: "[raw_tx]"
transaction_hash: "0x4444444444444444444444444444444444444444444444444444444444444444"
status: Confirmed
submitted_at: "[timestamp]"
confirmed_at: "[timestamp]"
error_message: ~
safe_execution:
  success: true
  safe_tx_hash: "0xee00000000000000000000000000000000000000000000000000000000000000"
  revert_reason: ~
